# RBAC-Chatbot

./: .gitignore  pyproject.toml
.claude/: settings.local.json
app/: main.py
app/resources/logs/: log.json
app/schemas/: chat.py
app/services/: chain.py  config.py  gaurdrails.py  indexing.py  logger.py  model.py  vectorstore.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ChatPage.tsx  LoginPage.tsx
observability/: config.alloy  docker-compose.yml
resources/data/hr/: hr_data.md
resources/eval/: eval_results.csv  golden_raw.csv  ragas_metric_scores.csv
resources/eval/gold/: precision_recall_by_k.csv
resources/eval/silver/: eval_results_k4.csv  eval_results_k5.csv  eval_results_k6.csv  eval_results_k8.csv
resources/logs/: log.json
resources/manifest/: index_manifest.json
scripts/: convert_hr.py  drop_collection.py  eval_script.py  generate_eval_set.py  ragas_evaluation.py
src/: backend.py  chain.py  config.py  convert_hr.py  indexing.py  model.py  vectorstore.py
tests/: conftest.py  test_chunking.py  test_loading.py  test_metadata.py  test_pipeline.py  test_retriever.py
